add templates, static, dynamic data
- `templates` directory for html files
- `static` directory for css, js, images
- `dynamic data` in html files
  - `{{ variable }}` for dynamic data

--- a/flask/notes.ipynb
+++ b/flask/notes.ipynb
@@ -127,6 +127,73 @@
     "- `port`: The port of the web server.\n",
     "- `debug`: If set to True, the server will automatically reload when code changes. The server will also provide a useful debugger in the browser."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## templates directory\n",
+    "\n",
+    "- The `templates` directory is a directory where Flask will look for HTML templates.\n",
+    "- Flask will look for templates in the `templates` directory by default.\n",
+    "- You can change the default directory by passing the `template_folder` argument to the `Flask` constructor like this: `app = Flask(__name__, template_folder='some_folder')`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `render_template` function\n",
+    "\n",
+    "- The `render_template` function is used to render HTML templates in Flask.\n",
+    "- The `render_template` function takes the name of the template as an argument.\n",
+    "- The `render_template` function looks for the template in the `templates` directory by default."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, render_template\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "\n",
+    "@app.route('/')\n",
+    "def hello_world():\n",
+    "    return render_template('home.html')\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    app.run(host='0.0.0.0', debug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `static` directory\n",
+    "\n",
+    "- The `static` directory is a directory where Flask will look for static files like CSS, JavaScript, and images.\n",
+    "- Flask will look for static files in the `static` directory by default."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Passing dynamic data to templates\n",
+    "\n",
+    "- You can pass dynamic data to templates by passing arguments to the `render_template` function.\n",
+    "- The arguments are passed as key-value pairs where the key is the name of the variable in the template and the value is the value of the variable.\n",
+    "- In the template, you can access the value of the variable using the `{{ variable_name }}` syntax."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
